modulo-04-gestion-apps-redes/ejercicios/ejercicio-02/manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      # FIX: este Service debe exponer el puerto 80
      port: 8080
      # FIX: el contenedor frontend escucha en 8080
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      # FIX: este Service debe exponer el puerto 80
      port: 8081
      # FIX: el contenedor backend escucha en 8080
      targetPort: 80
